# cpp-learning-path

./: .gitignore  README.md
LeagueOfConsoles/: .gitignore  LeagueOfConsoles.sln  README.md
LeagueOfConsoles/Game/: Game.vcxproj
LeagueOfConsoles/Game/src/: main.cpp
LeagueOfConsoles/Game/src/entities/: Champion.h  Entity.h
LittleTextAdventure/: CommandDictionary.cpp  CommandDictionary.h  InputManager.cpp  InputManager.h  LittleTextAdventure.sln  LittleTextAdventure.vcxproj  LittleTextAdventure.vcxproj.filters  LoopState.cpp  LoopState.h  MainMenuState.cpp  MainMenuState.h  OptionsMenuState.cpp  OptionsMenuState.h  Program.cpp  StatesManager.cpp  StatesManager.h  commands.cfg
OpenGLSandbox/OpenGLSandbox/Debug/: vc143.idb
OpenGLSandbox/OpenGLSandbox/Debug/OpenGLSandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLSandbox.lastbuildstate
OpenGLSandbox/OpenGLSandbox/src/: Application.cpp
OpenGLSandbox/OpenGLSandbox/x64/Debug/: OpenGLSandbox.exe.recipe  OpenGLSandbox.ilk  vc143.idb
Project1/: Project1.vcxproj  main.cpp
Project2/: Project2.vcxproj  main.cpp
ProjectSandbox/src/: main.cpp
SFML-game-cpp/: CMakeLists.txt  CMakeSettings.json  README.md
SFML-game-cpp/src/: Game.cpp
SFML-game-cpp/src/constants/: Globals.h
SFML-game-cpp/src/managers/: EventManager.cpp  StateManager.h  WindowManager.cpp  WindowManager.h
SFML-game-cpp/src/states/: State.h  StateIntro.h
Sandbox/: Sandbox.sln  Sandbox.vcxproj  main.cpp
Snake++/: Snake++.sln  Snake++.vcxproj  Snake++.vcxproj.filters
Snake++/src/: main.cpp
Snake++/src/core/: Game.h  Window.h
Snake++/src/entity/: World.h
Snake++/src/ui/: TextBox.cpp
cherno-archive/Arrows/: Arrows.vcxproj  Source.cpp
cherno-archive/Arrows/Debug/: Arrows.exe.recipe  Arrows.ilk  vc143.idb
cherno-archive/Arrows/Debug/Arrows.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cherno-archive/Arrows/x64/Debug/: Arrows.exe.recipe  Arrows.ilk  vc143.idb
cherno-archive/ClassesIntro/: ClassesIntro.vcxproj  Main.cpp
cherno-archive/ClassesIntro/ARM/Debug/: ClassesIntro.exe.recipe
cherno-archive/Copying/: Copying.vcxproj  Source.cpp
cherno-archive/Copying/x64/Debug/: Copying.exe.recipe  Copying.ilk  vc143.idb
cherno-archive/Logger/: Entity.cpp  Log.cpp  Logger.vcxproj  Logger.vcxproj.filters  Static.cpp
cherno-archive/Logger/ARM/Debug/: Entity.asm  Log.asm  Logger.exe.recipe  Static.asm
cherno-archive/MoarPointers/: MoarPointers.vcxproj  Source.cpp
cherno-archive/MoarPointers/x64/Debug/: MoarPointers.exe.recipe  MoarPointers.ilk  vc143.idb
cherno-archive/NewProject/: Main.cpp  NewProject.vcxproj
cherno-archive/NewProject/ARM/Debug/: PointersRefs.exe.recipe
cherno-archive/Threading/: Threading.vcxproj
cherno-archive/Threading/src/: Source.cpp
cherno-archive/Threading/x64/Debug/: Threading.exe.recipe  Threading.ilk  vc143.idb
cherno-archive/ThreadsMulti/: ThreadsMulti.sln  ThreadsMulti.vcxproj  ThreadsMulti.vcxproj.filters
cherno-archive/ThreadsMulti/src/: Inheritance.cpp  InvFastSqrt.cpp  Main.cpp  TestASM.cpp  castingSafu.cpp  pch.h
cherno-archive/Vectors/: Source.cpp  Structures.h  Vectors.vcxproj  Vectors.vcxproj.filters
cherno-archive/Vectors/x64/Debug/: Vectors.exe.recipe  Vectors.ilk  vc143.idb
games-archive/Cards/: .gitignore  CMakeLists.txt  CMakeSettings.json  Cards.vcxproj  vcpkg.json
games-archive/Cards/lib/pdcursesmod/: CMakeLists.txt
games-archive/Cards/src/: Program.cpp
games-archive/Cards/src/enums/: Suits.h
games-archive/LittleTextAdventure/: CommandDictionary.cpp  CommandDictionary.h  MainMenuState.cpp  OptionsMenuState.cpp  StatesManager.cpp
games-archive/SFML-game-cpp-template/: Info.plist.in
games-archive/SFML-game-cpp-template/src/: Game.h  main.cpp
games-archive/SFML-game-cpp-template/src/managers/: EventManager.h
games-archive/SFML-game-cpp-template/src/states/: StateIntro.cpp
games-archive/Snake++/src/entity/: World.cpp
image-campus-archive/Clase-14/Ejercicio-1/: Ejercicio-1.csproj
image-campus-archive/Clase-20/: Clase-20.sln
image-campus-archive/Clase-4/Ejercicio_4/: Main.cpp
image-campus-archive/SopaLetrasVS/SopaLetrasVS/: main.cpp
old-projects-archive/LeagueOfConsoles/Game/: Game.vcxproj.filters
old-projects-archive/OpenGLSandbox/: OpenGLSandbox.sln
old-projects-archive/OpenGLSandbox/OpenGLSandbox/: OpenGLSandbox.vcxproj
old-projects-archive/ProjectSandbox/: ProjectSandbox.sln  ProjectSandbox.vcxproj
old-projects-archive/SFML-game-cpp/: .gitignore
old-projects-archive/SFML-game-cpp/src/enums/: StateType.h
old-projects-archive/SFML-game-cpp/src/managers/: StateManager.cpp
random-games-archive/Cards/: .gitignore  CMakeLists.txt  CMakeSettings.json  Cards.sln  Cards.vcxproj  main.cpp
random-games-archive/Cards/src/: GameUnix.cpp  GameUnix.h  GameWin.cpp  GameWin.h  Program.cpp
random-games-archive/Cards/src/enums/: Suits.h
random-games-archive/Cards/src/managers/: GameManager.cpp  GameManager.h
random-games-archive/Cards/src/managers/factory/: GameManagerFactory.cpp  GameManagerFactory.h
random-games-archive/Cards/src/managers/impl/: UnixGameManager.cpp  UnixGameManager.h  WindowsGameManager.cpp  WindowsGameManager.h
random-games-archive/Cards/src/utils/: Console.h  ConsoleFactory.cpp  ConsoleFactory.h  UnixConsole.cpp  UnixConsole.h  WinConsoleUtils.cpp  WinConsoleUtils.h  WindowsConsole.cpp  WindowsConsole.h
random-games-archive/Cards/src/utils/factory/: ConsoleFactory.cpp  ConsoleFactory.h  InputFactory.cpp  OutputFactory.cpp
random-games-archive/Cards/src/utils/io/: Console.cpp  Console.h  Input.cpp  Input.h  Output.cpp  Output.h
random-games-archive/Cards/src/utils/io/impl/: UnixConsole.cpp  UnixConsole.h  UnixOutput.cpp  UnixOutput.h  WindowsConsole.cpp  WindowsConsole.h  WindowsInput.cpp  WindowsInput.h  WindowsOutput.cpp
random-games-archive/LittleTextAdventure/: InputManager.h  Status.h  commands.cfg
random-games-archive/Snake++/src/core/: Game.cpp  Window.cpp
raylib-gamedevtv-game/: main.cpp
(+89 files in other folders)
